Simplify code using "isPrimitive()"